--- a/README.Rmd
+++ b/README.Rmd
@@ -13,6 +13,8 @@ knitr::opts_chunk$set(
 
 # holmesr <img src="data-raw/hex-logo/hex-logo.png" align="right" height="139"/>
 
+**This code is designed and shared for my own personal use and will always be a work in progress, with bugs, issues and outright errors! Use at your own risk** 
+
 The goal of `holmesr` is to collate (and make portable) a miscellany of my personal R functions.
 
 Some of the more useful functions
@@ -27,14 +29,19 @@ Some of the more useful functions
   * `theme_holmes()`
   
 * Data wrangling
-  * `remove_otliers()`
+  * `remove_outliers()`
   * `print_all()`
 
 Install package, add it to the search path and set the plotting theme
+
+```{r eval = FALSE}
+remotes::install_github('cj-holmes/holmesr')
+```
+
 ```{r}
 library(holmesr)
 
-# Set the homesr plotting theme
+# Set the holmesr plotting theme
 ggplot2::theme_set(theme_holmes())
 ```
 
@@ -50,3 +57,6 @@ dists(dplyr::starwars, remove_outliers = TRUE, cols=c(-name, -sex))
 ```
 
 Arguments passed to `...` are passed on to `patchwork::wrap_plots` and control the layout of the visualisation (`ncol`, `nrow`, `widths`, `heights`, etc...)
+
+
+
